<resources>
    <string name="app_name">Gigbiz</string>
    <string name="slide_1_title">Welcome to Javatpoint!</string>
    <string name="slide_1_desc">Visit a Shop and choose from multiple Merchant Onboarding and sales projects for Big Brands! Earn upto 5X from a Single Shop visit. Grow Big on Sales with GigBiz!</string>
    <string name="slide_2_desc">Generate Leads, Open Free Savings Account, Demat account and earn per successful conversion! Monetize your youtube, Telegram channel with us. Grow big digitally with GigBiz! </string>
    <string name="slide_3_desc">Generate Credit Card Leads for Multiple Banks and earn with each successful card issued. Work from Anywhere.  Grow big with GigBiz!</string>
    <string name="slide_4_desc">Personal Loans, Business Loans, Education Loan and Home Loans all available under one roof. Earn good commissions on Insurance. Grow Big in Loans &amp; Insurance with GigBiz!</string>

    <string name="slide_2_title">Android</string>

    <string name="slide_3_title">Android</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Welcome Gauri Shankar</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_mytask">My Task</string>
    <string name="menu_wallet">Wallet</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_add_new_report">Add New Report</string>
    <string name="menu_project_report">Lead Status</string>
    <string name="menu_team_report">Team Payout Report</string>
    <string name="menu_project_report_detail">Project Payout Report</string>
    <string name="menu_contactus">ContactUs</string>
    <string name="logout">Logout</string>
    <string name="Privacy_policy">Privacy policy</string>
    <string name="good_work">Good Work</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>